--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="sports ranking io"
+      name="srating college basketball ranking"
       content="Sports ranking for college NCAA basketball"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>>sports ranking</title>
+    <title>>sRating</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
